@@ -17,6 +17,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+using Unique;
 using Gtk;
 using Gst;
 
@@ -26,14 +27,25 @@ class BetaRadio : GLib.Object {
 
     public static void main (string[] args) {
         Gdk.threads_init();
+
         Intl.bindtextdomain( Config.PACKAGE_NAME, Config.LOCALEDIR );
         Intl.bind_textdomain_codeset( Config.PACKAGE_NAME, "UTF-8" );
         Intl.textdomain( Config.PACKAGE_NAME );
+
         Gdk.threads_enter();
         Gst.init(ref args);
         Gtk.init(ref args);
-        var app = new BetaRadio();
+
+        Unique.App app = new Unique.App("org.sylee.betaradio", null);
+
+        if (app.is_running) {
+            message("There is already an BetaRadio instance running.");
+            return;
+        }
+
+        var instance = new BetaRadio();
         message("Running");
+
         Gtk.main();
         Gdk.threads_leave();
     }
